# podcast_notes

./: .env.example  .gitignore  DESIGN_SYSTEM.md  README.md  ai_studio_code.html  debug_regex.py  gemini-code-1779857396666.html  generate_note.py  pyproject.toml  run_sensevoice.py  test_deepseek.py  test_dense_workflow.py  test_full_workflow.py  test_image_generator.py  test_metadata_fix.py  test_search.py  test_templates.py  test_v8_transcript.py  test_visual_workflow.py  transcript_reader_optimized.html
.trae/documents/: content-transcript-redesign-plan.md  dashboard-design-plan.md  dashboard-investigation-report.md  dashboard-optimization-plan.md  deployment-optimization-plan.md  document-preview-download-prd.md  download-enhancement-plan.md  download-ux-audit-plan.md  episode-selection-feature.md  fix-plan-p0-execution.md  fix-plan-p0.md  fix-report-p0.md  (+29 more)
backend/: __init__.py  main.py
config/: __init__.py  settings.py
core/: __init__.py  audio_downloader.py  content_processor.py  document_validator.py  image_generator.py  language_detector.py  proofreader.py  smart_transcriber.py  speaker_diarizer.py  speaker_registry.py  template_recommender.py  transcriber.py  xhs_publisher.py
data/: test_prompt_example.md
docs/: download-feature-guide.md
models/: __init__.py  podcast.py  template.py  transcript.py  visual_note.py  xiaohongshu.py
prompts/: xiaohongshu_note_v1.md  xiaohongshu_note_v2.md  xiaohongshu_note_v3.md  xiaohongshu_note_v4_humanized.md  xiaohongshu_note_v5_dry_goods.md  xiaohongshu_note_v6_story.md  xiaohongshu_note_v7_visual.md  xiaohongshu_note_v7_visual_dense.md  xiaohongshu_note_v8_transcript.md  xiaohongshu_note_v9_analysis.md
scripts/: download_and_process.py  generate_metrics_report.py
services/: __init__.py  llm_service.py  podcast_search.py
templates/: content.html  content_detailed.html  content_transcript.html  cover.html  demo_data.json  generate_editorial.py  generate_previews.py  summary.html  summary_outline.html  thinking.html
test_output/: test_content_detailed.html  test_summary_outline.html  test_thinking.html
tests/: test_accessibility.py  test_downloader.py  test_library_counts.py  test_models.py  test_performance_benchmarks.py  test_processor.py  test_speaker_diarization.py  test_template_recommender.py  test_transcription_integration.py
utils/: __init__.py  logger.py  metrics.py  retry.py
web-dashboard/: next.config.ts  package-lock.json  package.json
(+64 files in other folders)
