[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "podcast-to-xhs"
version = "0.1.0"
description = "播客转小红书自动化工作流 — 从音频抓取到 AI 内容提炼与发布"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["podcast", "xiaohongshu", "ai", "automation", "stt", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
    "requests>=2.31.0",
    "feedparser>=6.0.0",
    "jinja2>=3.1.0",
    "structlog>=24.1.0",
    "tenacity>=8.2.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.20.0",
    "httpx>=0.25.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]
whisper = [
    "openai-whisper>=20231117",
    "faster-whisper>=1.0.0",
]
diarization = [
    "pyannote.audio>=2.1.1",
    "speechbrain>=0.5.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
]
playwright = [
    "playwright>=1.40.0",
]
schedule = [
    "apscheduler>=3.10.0",
]
all = [
    "podcast-to-xhs[dev,whisper,diarization,playwright,schedule]"
]

[project.scripts]
podcast-to-xhs = "scripts.download_and_process:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["config*", "core*", "models*", "services*", "utils*"]

[tool.ruff]
target-version = "py310"
line-length = 100
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
]
